--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,7 +9,7 @@
         </mat-panel-title>
         <mat-panel-description>
           <span>UninaCorse E-Team</span>
-          <mat-icon> directions_car</mat-icon>
+          <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon"></mat-icon>
         </mat-panel-description>
       </mat-expansion-panel-header>
       <p>
