--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -111,7 +111,9 @@
     </div>
 
   
+<div class="row" style="padding-top: 450px; margin-top: 299px;">
     <app-footer id="footer" class="footer"></app-footer>
+</div>
     
     
     
