Aggiunto Component per visualizzazione angoli rollio ecc... Corretti alcuni bug grafici

--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -7,7 +7,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-5" style="margin-top: 10px">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px">
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV}}°C</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px; margin-left: 50px">
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV}}°C</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
+        </div>
+       <!-- <div class="col-sm-5" style="margin-top: 10px">
             <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV}}°C</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
@@ -18,7 +30,7 @@
             <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
-        </div>
+        </div>-->
     </div>
     <div class="row">
         <div class="col-sm-5">
