--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -1,33 +1,33 @@
 <div class="container-fluid" style="border:  black; border-style: dotted; padding: 10px;position: relative; margin-top: -130px;">
     <div class="row">
-        <div class="col-sm-6 col-md-offset-4">
+        <div class="col-sm-6 col-md-offset-4" style="margin-top: 9px">
             <h2 id="spieControllo" class="banner-font">Spie di Controllo</h2>
         </div>
     </div>
-    <div class="row" style="position: relative; top: -30px">
+    <div class="row" style="position: relative; top: -40px">
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 10px">
-            <button id="BMS"class="button">BMS</button>
+            <button class="button">BMS</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">TRQ</button>
+            <button class="button">TRQ</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">ECU</button>
+            <button class="button">ECU</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">OH</button>
+            <button class="button">OH</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">TCS</button>
+            <button class="button">TCS</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">IMB</button>
+            <button class="button">IMB</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">???</button>
+            <button class="button" >???</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button id="BMS"class="button">???</button>
+            <button class="button">???</button>
         </div>
     </div>
     <div class="row" style="position: relative; top: -20px">
