--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="">Optional</a></li>
-                <li><a href="">Optional</a></li>
+                <li><a href=""><b>ESCI</b></a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div>
