Implementata schermata della diagnostica... E' ancora da definire la formattazione dei messaggi di diagnostica.

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
         <img src="/assets/img/logo.svg" width="30" height="30" class="navbar-header" alt="">
         <strong class="banner-font">Unina Corse</strong>
     </a>
@@ -17,7 +17,7 @@
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font">
-                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/diagnostica" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font">
                     <a routerLink="/storico" routerLinkActive="routerActive"><b>Storico Sensori</b><span class="sr-only">(current)</span></a>
