--- a/src/app/diagnostica/diagnostica.component.css
+++ b/src/app/diagnostica/diagnostica.component.css
@@ -12,6 +12,8 @@
     border: 3px solid whitesmoke;
     background-color: ghostwhite;
     padding: 10px;
+    max-height: 500px;
+    overflow: auto;
 }
 .textClass{
     font-family: 'Open Sans', sans-serif;
@@ -31,3 +33,14 @@
     margin-top: 2%;
     margin-left: 74%;
 }
+.button-row {
+    display: table-cell;
+    width: 490px;
+}
+
+.button-row .mat-button-base {
+    margin: 8px 8px 8px 0;
+}
+
+
+
