--- a/src/app/diagnostica/diagnostica.component.html
+++ b/src/app/diagnostica/diagnostica.component.html
@@ -11,10 +11,13 @@
      <script src="https://kit.fontawesome.com/f6b29a4c68.js" crossorigin="anonymous"></script>
  </head>
  <body class="bodyClass">
+
     <app-nav-bar></app-nav-bar>
+
     <div class="txtCenter">
         <p class="textClass">Messaggi di Diagnostica</p>
     </div>
+
     <div class="center">
         <mat-selection-list #msg role="listbox">
             <mat-list-option role="option" *ngFor="let item of messagesList">
@@ -22,15 +25,19 @@
             </mat-list-option>
         </mat-selection-list>
     </div>
-    <div class="button-container" *ngIf="msg.selectedOptions.selected.length>0">
-        <button mat-fab color="primary" (click)="deleteMessages(msg.selectedOptions.selected)">
-            <mat-icon>delete</mat-icon>
-        </button>
-    </div>
-    <div class="button-container" *ngIf="msg.selectedOptions.selected.length==0">
-        <button mat-fab disabled color="primary">
-            <mat-icon>delete</mat-icon>
-        </button>
+
+    <div style="margin-left: 70%">
+        <div class="button-row">
+            <button mat-raised-button color="primary" (click)="selectAll()" *ngIf="msg.selectedOptions.selected.length<messagesList.length && messagesList.length>1">Select All</button>
+            <button mat-raised-button disabled color="primary" *ngIf="messagesList.length<=1" (click)="msg.selectAll()">Select All</button>
+            <button mat-raised-button color="basic" (click)="selectNone()" *ngIf="msg.selectedOptions.selected.length==messagesList.length && messagesList.length>1">Deselect All</button>
+            <button mat-fab color="primary" *ngIf="msg.selectedOptions.selected.length>0" (click)="deleteMessages(msg.selectedOptions.selected)">
+                <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-fab disabled color="primary" *ngIf="msg.selectedOptions.selected.length==0">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </div>
     </div>
  </body>
 </html>
