Risolto problema scroll Storico... Adesso lo scroll viene attivato attraverso la function startScrolling solo all'interno della sezione storico

--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -21,7 +21,7 @@
             <button class="button">TCS</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
-            <button class="button">IMB</button>
+            <button class="button">IMD</button>
         </div>
         <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1" style="margin-left: 20px">
             <button class="button" >???</button>
