--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
                     <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Dettaglio Batterie</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font">
-                    <a routerLink="/notimplementedyet" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
+                    <a routerLink="/test" routerLinkActive="routerActive"><b>Tracciato</b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="sections-font">
                     <a routerLink="/diagnostica" routerLinkActive="routerActive"><b>Diagnostica</b><span class="sr-only">(current)</span></a>
