--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Optional</a></li>
+                <li><a href=""><b>Account</b></a></li>
                 <li><a href=""><b>ESCI</b></a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
