--- a/src/app/new-battery/new-battery.component.html
+++ b/src/app/new-battery/new-battery.component.html
@@ -8,15 +8,15 @@
     </div>
     <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px">
-            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV}}°C</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV}}V</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaHV | number: '1.1-2'}}°C</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneHV | number: '1.1-3'}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteHV | number: '1.1-3'}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataHV}}%</span></button>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-top: 10px; margin-left: 50px">
-            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV}}°C</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV}}V</span></button>
-            <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV}}A</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tmediaLV | number: '1.1-2'}}°C</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{tensioneLV | number: '1.1-3'}}V</span></button>
+            <button class="btn bottom" type="button"><span class="spanBar">{{correnteLV | number: '1.1-3'}}A</span></button>
             <button class="btn bottom" type="button"><span class="spanBar">{{dataLV}}%</span></button>
         </div>
        <!-- <div class="col-sm-5" style="margin-top: 10px">
