--- a/src/app/spie-controllo/spie-controllo.component.html
+++ b/src/app/spie-controllo/spie-controllo.component.html
@@ -33,15 +33,15 @@
     <div class="row" style="position: relative; top: -20px">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <h1 class="banner-font-small">T. Freno:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{breakTemp}}°C</span></button>
+            <button class="btn " type="button"><span class="spanBar">{{breakTemp}}°</span></button>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <h1 class="banner-font-small">P.Freni:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{breakPressure}}</span></button>
+            <button class="btn " type="button"><span class="spanBar">{{breakPressure | number: '1.1-3'}}</span></button>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <h1 class="banner-font-small">T.Liquid:</h1>
-            <button class="btn " type="button"><span class="spanBar">{{liquidTemperature}}°C</span></button>
+            <button class="btn " type="button"><span class="spanBar">{{liquidTemperature | number: '1.1-2'}}°</span></button>
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <h1 class="banner-font-small">Flusso:</h1>
