--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -91,7 +91,7 @@
             <button mat-raised-button color="primary" id="btnCaricaDate" (click)="getID()">Mostra ID </button>
             <button mat-raised-button color="primary" id="btnAvanti" (click)="aggiungiID()">Conferma selezione</button>
             <button mat-raised-button color="primary" id="btnJson" (click)="startHighChart()">Mostra grafici sensori</button>
-            <button mat-raised-button color="primary" id="btnConfermaID" (click)="startHighChartGen()">Mostra grafico generale</button>
+            <button mat-raised-button color="primary" id="btnConfermaID" (click)="mostraPlotUniti()">Mostra grafico generale</button>
         </div>
 
     </div>
