--- a/src/app/storico/storico.component.css
+++ b/src/app/storico/storico.component.css
@@ -285,3 +285,11 @@ html{
     bottom: 0;
     width: 100%;
 }
+
+.rowFiltri{
+    background-color: #CAC7D7;
+    box-shadow: -30px 30px 15px rgba(0, 0, 0, 0.3);
+    margin-left: 40px;
+    margin-right: 40px;
+    border-radius: 25px;
+}
