Migliorata grafica e gestione dei grafici

--- a/src/app/highchartstest/highchartstest.component.html
+++ b/src/app/highchartstest/highchartstest.component.html
@@ -39,7 +39,7 @@
                     </mat-list-option>
                 </mat-selection-list>
             </div>
-            <div id="grafici" *ngIf="chartsListDisplayed">
+            <div #graph id="grafici" *ngIf="chartsListDisplayed">
 <!--                <div *ngFor="let i of idSensoriScelti" id="{{i}}" style="width:60%; height:300px;"></div>-->
 
             </div>
