Aggionata gestione LOGIN mediante service (in cerca di bug)

--- a/src/app/storico/storico.component.html
+++ b/src/app/storico/storico.component.html
@@ -35,9 +35,9 @@
 
     <div class="row" id="rowListaID">
 
-        <div class="col">
+        <div class="col scrollable">
 
-            <div class="scrollable">
+          
 
                 <div id="box" class="box">
                     <h2 id="titleBox">Seleziona ID sensori</h2>
@@ -45,7 +45,6 @@
                     </ul>
                 </div>
 
-            </div>
 
         </div>
 
