Aggiunta possibilità di cambio password.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
       <embed src="../assets/svg/eteam.svg" width="40%" height="40%">
     </object>
   <h3>Benvenuto</h3>
-    <button (click)="mostra()" routerLink="uninacorse">Mostra BOX</button>
-    <button (click)="mostraStorico()" routerLink="storico">Storico</button>
+    <button (click)="showRouter()" routerLink="uninacorse">Mostra BOX</button>
+    <button (click)="showRouter()" routerLink="storico">Storico</button>
+    <button (click)="showRouter()" routerLink="cambiopassword">Cambia password</button> 
     <button (click)="logout()">Logout</button>
   </div>
 
