--- a/src/app/dialog-test/dialog-test.component.html
+++ b/src/app/dialog-test/dialog-test.component.html
@@ -1,9 +1,6 @@
-<h1 mat-dialog-title>Benvenuto</h1>
-<div mat-dialog-content class="dialogText">
-  <p id="testo">Tutti i dati sono stati correttamente caricati.</p>
-  <p>Per visualizzarli ti basterà cliccare su MOSTRA ID</p>
-  
-</div>
+<h1 mat-dialog-title>Aggiornamento effettuato!</h1>
+<div mat-dialog-content>La password è stata  correttamente aggiornata.</div>
+<div mat-dialog-content>Effettua nuovamente l'accesso.</div>
 <div mat-dialog-actions>
-  <button mat-button  (click)="close()" >Chiudi</button> 
+  <button mat-button mat-dialog-close>Close</button>
 </div>
