--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,10 +50,47 @@ input, button{
     border: 1px solid #999;
 
 }
+.myButton{
+    border: 0px;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+}
 
+.myButton:hover{
+    background: #fff;
+    color: #5d8ffc;
+    border: 1px solid #5d8ffc;
+    cursor: pointer;
+}
+/*
+.loggedin-div button{
+    border: 0px;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 10px;
+    display: block;
+    width: 100%;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+}
+
+.loggedin-div button:hover{
+    background: #fff;
+    color: #5d8ffc;
+    border: 1px solid #5d8ffc;
+    cursor: pointer;
+}*/
+/*
 .main-div button, .loggedin-div button, .register-div button{
-    background: #5d8ffc;
-    color: #fff;
+    
+    
     border: 0px;
     border-radius: 5px;
     padding: 15px;
@@ -79,4 +116,4 @@ input, button{
 
 img{
     margin-left: 40%;
-}
+}*/
