--- a/src/app/highchartstest/highchartstest.component.css
+++ b/src/app/highchartstest/highchartstest.component.css
@@ -12,7 +12,7 @@
     border: 3px solid whitesmoke;
     background-color: ghostwhite;
     padding: 10px;
-    max-height: 700px;
+    max-height: 680px;
     overflow: auto;
 }
 .textClass{
@@ -20,6 +20,12 @@
     color: whitesmoke;
     text-shadow: 10px 3px 9px black;
     font-size: 40px;
+}
+.textClassSmall{
+  font-family: 'Open Sans', sans-serif;
+  color: black;
+  text-shadow: 5px 3px 5px dimgrey;
+  font-size: 15px;
 }
 .txtCenter{
     margin: auto;
