--- a/src/app/highchartstest/highchartstest.component.html
+++ b/src/app/highchartstest/highchartstest.component.html
@@ -22,37 +22,38 @@
         <div class="center">
             <mat-form-field appearance="fill">
                 <mat-label>Choose a date</mat-label>
-              <input matInput #date [matDatepicker]="picker">
+              <input matInput #date [matDatepicker]="picker" readonly>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
-            <label>Scegli ora inizio:</label><input type="time" #orain id="oraInizioGenerale" value="22:16:00" step="2"/>
-            <label>Scegli ora fine:</label><input type="time" #orafin id="oraFineGenerale" value="22:18:00" step="1"/>
-            <button mat-button color="primary" (click) = prepareValuesForSearch(orain.value,orafin.value,date.value)>Search</button>
-
+            &nbsp;&nbsp;&nbsp;
+            <label>Scegli ora inizio:&nbsp;</label><input type="time" #orain id="oraInizioGenerale" value="22:16:00" step="2">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <label>Scegli ora fine:&nbsp;</label><input type="time" #orafin id="oraFineGenerale" value="22:18:00" step="1">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button mat-button color="primary" *ngIf="date.value.length>7" (click)=prepareValuesForSearch(orain.value,orafin.value,date.value) style="font-size: 17px">Search</button>
+            <button mat-button color="primary" disabled *ngIf="date.value.length<=7" style="font-size: 17px">Search</button>
         </div>
         <div class = "center">
             <div *ngIf="sensorListDisplayed">
+              <div style="max-height: 600px; overflow: auto">
                 <mat-selection-list #sensoriSelezionati role="listbox">
-                    <mat-list-option role="option" *ngFor="let item of listaSensori" [value]="item">
-                        {{item | strRemUnderscore | titlecase}}
-                    </mat-list-option>
+                  <mat-list-option role="option" *ngFor="let item of listaSensori" [value]="item">
+                    {{item | strRemUnderscore | titlecase}}
+                  </mat-list-option>
                 </mat-selection-list>
+              </div>
+              <div>
+                <label class="textClassSmall">&nbsp;&nbsp;&nbsp;Sensori Selezionati: {{sensoriSelezionati.selectedOptions.selected.length}}</label>
+              </div>
             </div>
-            <div #graph id="grafici" *ngIf="chartsListDisplayed">
-<!--                <div *ngFor="let i of idSensoriScelti" id="{{i}}" style="width:60%; height:300px;"></div>-->
-
-            </div>
+            <div #graph id="grafici" *ngIf="chartsListDisplayed"></div>
         </div>
-
         <div style="margin-left: 70%">
-            <div class="button-row">
-                <button mat-raised-button color="primary" (click)="mostraGrafici()" *ngIf="sensorListDisplayed">Mostra Grafici</button>
-                <button mat-raised-button color="primary" (click)="unisciGrafici()" *ngIf="!sensorListDisplayed && canJoinGraph">Unisci</button>
-            </div>
+          <div class="button-row">
+            <button mat-raised-button color="primary" (click)="mostraGrafici()" *ngIf="sensorListDisplayed">Mostra Grafici</button>
+            <button mat-raised-button color="primary" (click)="unisciGrafici()" *ngIf="!sensorListDisplayed && canJoinGraph">Unisci</button>
+          </div>
         </div>
-
-        <!--<div id="chart1" style="width:60%; height:300px;"></div>
-        <div id="chart2" style="width:60%; height:300px;"></div>-->
     </body>
 </html>
