--- a/src/app/highchartstest/highchartstest.component.html
+++ b/src/app/highchartstest/highchartstest.component.html
@@ -44,6 +44,8 @@
                 </mat-selection-list>
               </div>
               <div>
+                <mat-divider></mat-divider>
+                <br>
                 <label class="textClassSmall">&nbsp;&nbsp;&nbsp;Sensori Selezionati: {{sensoriSelezionati.selectedOptions.selected.length}}</label>
               </div>
             </div>
